added card-deck class to html target; parse error edit

--- a/snap-reduce-cards.html
+++ b/snap-reduce-cards.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<div class="container">
-			<div id="target"></div>
+			<div class="card-deck" id="target"></div>
 		</div>
 	</body>
 </html>
